--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.profiles.active=@spring.profiles.active@
 spring.jpa.database-platform=com.hutchison.runeshare.config.sqlite.SQLiteDialect
 driverClassName=org.sqlite.JDBC
-spring.datasource.url=jdbc:sqlite:rs-local.db
+spring.datasource.url=jdbc:sqlite:src/main/resources/rs-local.db
 #spring.datasource.url=jdbc:sqlite::myDb?cache=shared
 spring.datasource.username=sa
 spring.datasource.password=sa
